Fix spacing below license select box

--- a/ckanext/catalog/public/ckanext-catalog/css/catalog.css
+++ b/ckanext/catalog/public/ckanext-catalog/css/catalog.css
@@ -3,4 +3,5 @@
 ul.packages { clear: both; }
 #package-edit .state { display: none; }
 #package-edit dd, #package-edit dl { margin-bottom: 0; }
+#package-edit select { margin-bottom: 0.5em; }
 div.details.subsection { margin-top: 2em; }
